@@ -1,3 +1,9 @@
+2006-04-17  Martin Hunt  <hunt@redhat.com>
+
+	* vsprintf.c (_stp_vsnprintf): Fix endian
+	before writing binary.
+	(_stp_endian): New variable to control endianess.
+
 2006-04-11  Tom Zanussi  <zanussi@us.ibm.com>
 
 	* print.c (_stp_print_flush): Change TIMESTAMP_SIZE to
